# cpc-commentary

./: .env.example  .gitignore  audio_capture.py  commentary.py  pyproject.toml  screenshot.py  session.py  slack-app-manifest.yml  slides.py  transcript.py
bots/: hirai-bot  tanichu-bot
data/daikoku-bot/: CLAUDE.md
data/hirai-bot/: CLAUDE.md
data/maruyama-bot/: CLAUDE.md
data/tanichu-bot/: CLAUDE.md
